# Network

./: .gitignore  CMakeLists.txt  MSBuild.bat  Version.h.in
include/: Common.h  Connection.h  IClient.h  IServer.h  Message.h  ThreadSafeDeque.h
src/: Version.cpp
